[package]
name = "lcd1602-utils"
version = "0.1.0"
edition = "2024"

[patch.crates-io]
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "e3aff14", package = "embassy-time-driver" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "e3aff14", package = "embassy-time" }

[dependencies]
hd44780-driver = "0.4.0"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "e3aff14", package = "embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "e3aff14", package = "embassy-time-driver" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "e3aff14", package = "embassy-rp", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
defmt = "0.3"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-graphics = "0.8.1"
itoa = { version = "1.0.14", default-features = false } # For integers
ryu = { version = "1.0", default-features = false } # For floats

[lib]
name = "lcd1602-utils"
path = "src/lcd.rs"
