[package]
name = "lcd1602_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
hd44780-driver = ">=0.4.0"
embedded-hal-1 = { package = "embedded-hal", version = ">=1.0" }
embassy-time = { version = ">=0.4", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = ">=0.4", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
defmt = ">=0.3"
embedded-hal-bus = { version = ">=0.1", features = ["async"] }
embedded-graphics = ">=0.8.1"
itoa = { version = ">=1.0.14", default-features = false } # For integers
ryu = { version = ">=1.0", default-features = false } # For floats

[lib]
name = "lcd1602_utils"
path = "src/lcd.rs"
